--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" media="screen" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 </head>
 
 <body>
-
-    <div id="app"></div>
-
+    <div id="app" class="container"></div>
     <script src="/app/app.js"></script>
-
 </body>
 </html>
+
