--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="app" class="container"></div>
-    <script src="/app/app.js"></script>
+    <script src="https://localhost:3000/app/app.js"></script>
 </body>
 </html>
 
